# Engine

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
android-project/: local.properties
android-project/app/: build.gradle
android-project/gradle/wrapper/: gradle-wrapper.properties
assets/models/: dagger_01.glb  table.glb  table2.glb  test2.glb
assets/shaders/: billboard.vs  debug_physics_lines.fs  debug_physics_lines.vs  debug_physics_lines_ssbo.fs  debug_physics_lines_ssbo.vs  debug_physics_lines_ubo.fs  debug_physics_lines_ubo.vs  font.fs  font.vs  full_screen_quad.fs  full_screen_quad.vs  healthbar.fs  healthbar.vs  lit.fs  lit_helpers.h  simple.fs  simple.vs  simple_vertex_definitions.h  sprite.fs  sprite.vs  ui_image.fs  unlit.fs  vertex_skinning.vs
assets/ui_docs/: pong_battleground.rcss  pong_battleground.rml  pong_main_menu.rcss  pong_main_menu.rml  project_c.rml  project_c_health_bar.rml  tron-arrow.tga  window.rcss  window_health_bar.rcss
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/impl/: animation.cpp  animation.h  animation_controller.h  application.cpp  application.h  application_editor.cpp  application_editor.h  asset_store.cpp  asset_store.h  editor.cpp  editor.h  engine.cpp  framebuffer.h  game_timer.cpp  game_timer.h  gltf_parser.cpp  gltf_parser.h  graphics.cpp  graphics.h  logger.cpp  logger.h  material.cpp  material.h  math_helpers.h  named_atlas.h  nav_mesh.cpp  nav_mesh.h  physics_world.cpp  physics_world.h  profiler.h  pso_3d.cpp  pso_3d.h  scene.cpp  scene.h  text_2d_manager.cpp  text_2d_manager.h  text_renderer.cpp  text_renderer.h  ui_document.cpp  ui_document.h  (+4 more)
src/engine/impl/RmlUI_backend/: RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_GL3.cpp  RmlUi_Renderer_GL3.h
src/engine/impl/components_utils/: components_initializers.cpp  components_initializers.h
src/engine/include/: engine.h
src/engine/include/components/: animation_component.h  camera_component.h  collider_component.h  image_component.h  light_component.h  material_component.h  mesh_component.h  name_component.h  parent_component.h  rect_transform_component.h  rigid_body_component.h  sprite_component.h  text_component.h  transform_component.h
src/engine_app_toolkit/: CMakeLists.txt
src/engine_app_toolkit/impl/: event_system.cpp  iapplication.cpp  iscene.cpp  iscript.cpp  scene_manager.cpp
src/engine_app_toolkit/include/: event_system.h  event_types_defs.h  iapplication.h  iscene.h  iscript.h  scene_manager.h  utils.h
src/engine_app_toolkit/include/network/: net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
src/games/: CMakeLists.txt
src/games/pong/: CMakeLists.txt  main.cpp
src/games/pong/scenes/: battleground_scene.cpp
src/games/pong/scripts/: ball_script.h  battleground_ui_script.cpp  camera_script.cpp  event_types.h  goal_net_script.cpp  goal_net_script.h  player_paddle_script.h  wall_script.cpp  wall_script.h
src/games/project_c/: CMakeLists.txt  animation_controller.h  app.cpp  app.h  camera_script.h  main.cpp  model_info.h  nav_mesh.cpp  nav_mesh.h  prefab.cpp  prefab.h  prefab_types.h  scripts.h
src/games/project_c/client/: CMakeLists.txt  main.cpp
src/games/project_c/common/: CMakeLists.txt  network_message_types.h
src/games/project_c/scenes/: scene_city.cpp  scene_city.h  scene_test.cpp  scene_test.h
src/games/project_c/scripts/: base_script.cpp  base_script.h  camera_script.cpp  camera_script.h  enemy_script.cpp  enemy_script.h  enviorment_script.cpp  enviorment_script.h  scripts_utils.cpp  scripts_utils.h  solider_script.cpp  solider_script.h
src/games/project_c/server/: CMakeLists.txt  main.cpp
src/main/: CMakeLists.txt  gui_event_system.h  main.cpp
src/main/app_toolkit/: event_system.cpp  event_system.h  event_types_defs.h  gui_event_system.cpp  gui_event_system.h  gui_event_types_defs.h  iscene.cpp  iscene.h  iscript.cpp  iscript.h  scene_manager.cpp  scene_manager.h  utils.h
src/main/pong/: ball_script.cpp  ball_script.h  camera_script.cpp  camera_script.h  global_constants.h  goal_net_script.cpp  goal_net_script.h  player_paddle_script.cpp  player_paddle_script.h  wall_script.cpp  wall_script.h
src/main/pong/scenes/: battleground_scene.cpp  battleground_scene.h  main_menu_scene.cpp  main_menu_scene.h  main_scene.cpp  main_scene.h  pve_scene.cpp  pve_scene.h  pvp_scene.cpp  pvp_scene.h
src/main/pong/scripts/: ball_script.cpp  ball_script.h  battleground_ui_script.cpp  battleground_ui_script.h  bot_paddle_script.cpp  camera_script.cpp  camera_script.h  global_constants.h  goal_net_script.cpp  goal_net_script.h  player_paddle_script.cpp  player_paddle_script.h  ui_scripts.cpp  ui_scripts.h  wall_script.cpp  wall_script.h
