cmake_minimum_required(VERSION 3.20.0)

set(TARGET_NAME "OpenGLPlayground")
project(${TARGET_NAME} CXX C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED On)
set(CMAKE_CXX_EXTENSIONS Off)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install)

add_compile_options($<$<CXX_COMPILER_ID:MSVC>:/MP>)

add_subdirectory(thirdparty)
add_subdirectory(src)
